solution instead of venture migration

--- a/contents/base/{{ artifact-id }}/pom.xml
+++ b/contents/base/{{ artifact-id }}/pom.xml
@@ -5,7 +5,7 @@
 
     <parent>
         <groupId>{{ group-id }}</groupId>
-        <artifactId>{{ org-venture-name }}-platform</artifactId>
+        <artifactId>{{ org-solution-name }}-platform</artifactId>
         <version>{{ platform-version }}</version>
     </parent>
 
@@ -33,19 +33,19 @@
     </modules>
 
     <properties>
-        <{{ group-id }}.{{ org-venture-name }}-platform>{{ platform-version }}</{{ group-id }}.{{ org-venture-name }}-platform>
+        <{{ group-id }}.{{ org-solution-name }}-platform>{{ platform-version }}</{{ group-id }}.{{ org-solution-name }}-platform>
     </properties>
 
     <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>{{ group-id }}</groupId>
-                <artifactId>{{ org-venture-name }}-platform-bom</artifactId>
-                <version>${{'{'}}{{ group-id }}.{{ org-venture-name }}-platform{{'}'}}</version>
+                <artifactId>{{ org-solution-name }}-platform-bom</artifactId>
+                <version>${{'{'}}{{ group-id }}.{{ org-solution-name }}-platform{{'}'}}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-            <!-- Common Third-Party Dependency Management defined in {{ org-venture-name }}-dependencies. Import Service BOMs here.-->
+            <!-- Common Third-Party Dependency Management defined in {{ org-solution-name }}-dependencies. Import Service BOMs here.-->
         </dependencies>
     </dependencyManagement>
 
