--- a/contents/persistence/{{ artifact-id}}/{{ artifact-id }}-persistence/pom.xml
+++ b/contents/persistence/{{ artifact-id}}/{{ artifact-id }}-persistence/pom.xml
@@ -47,7 +47,7 @@
         </dependency>
         <dependency>
             <groupId>{{ group-id }}</groupId>
-            <artifactId>{{ org-venture-name }}-platform-persistence-jpa</artifactId>
+            <artifactId>{{ org-solution-name }}-platform-persistence-jpa</artifactId>
         </dependency>
     </dependencies>
 
