--- a/contents/base/{{ artifact-id }}/{{ artifact-id }}-server/pom.xml
+++ b/contents/base/{{ artifact-id }}/{{ artifact-id }}-server/pom.xml
@@ -46,7 +46,7 @@
         </dependency>
         <dependency>
             <groupId>{{ group-id }}</groupId>
-            <artifactId>{{ org-venture-name }}-platform-logging</artifactId>
+            <artifactId>{{ org-solution-name }}-platform-logging</artifactId>
         </dependency>
         <dependency>
             <groupId>io.prometheus</groupId>
@@ -62,11 +62,11 @@
         </dependency>{% if feature-sqs or feature-sns %}
         <dependency>
             <groupId>{{ group-id }}</groupId>
-            <artifactId>{{ org-venture-name }}-platform-aws-messaging</artifactId>
+            <artifactId>{{ org-solution-name }}-platform-aws-messaging</artifactId>
         </dependency>{% endif %}
         <dependency>
             <groupId>{{ group-id }}</groupId>
-            <artifactId>{{ org-venture-name }}-platform-tracing</artifactId>
+            <artifactId>{{ org-solution-name }}-platform-tracing</artifactId>
         </dependency>
     </dependencies>
 
@@ -77,7 +77,7 @@
                 <artifactId>jib-maven-plugin</artifactId>
                 <configuration>
                     <to>
-                        <image>p6m-dev.jfrog.io/{{ org-venture-name }}-docker-local/applications/${project.artifactId}:${project.version}</image>
+                        <image>p6m-dev.jfrog.io/{{ org-solution-name }}-docker-local/applications/${project.artifactId}:${project.version}</image>
                     </to>
                 </configuration>
             </plugin>
