--- a/contents/testing/{{ artifact-id }}/{{ artifact-id }}-environment-tests/pom.xml
+++ b/contents/testing/{{ artifact-id }}/{{ artifact-id }}-environment-tests/pom.xml
@@ -46,7 +46,7 @@
         </dependency>
         <dependency>
             <groupId>{{ group-id }}.platform</groupId>
-            <artifactId>{{ org-venture-name }}-libs-logging</artifactId>
+            <artifactId>{{ org-solution-name }}-libs-logging</artifactId>
         </dependency>
         <dependency>
             <groupId>io.prometheus</groupId>
@@ -58,7 +58,7 @@
         </dependency>
         <dependency>
             <groupId>{{ group-id }}.platform</groupId>
-            <artifactId>{{ org-venture-name }}-libs-tracing</artifactId>
+            <artifactId>{{ org-solution-name }}-libs-tracing</artifactId>
         </dependency>
     </dependencies>
 
@@ -69,7 +69,7 @@
                 <artifactId>jib-maven-plugin</artifactId>
                 <configuration>
                     <to>
-                        <image>p6m-dev.jfrog.io/{{ org-venture-name }}-docker-local/applications/${project.artifactId}:${project.version}</image>
+                        <image>p6m-dev.jfrog.io/{{ org-solution-name }}-docker-local/applications/${project.artifactId}:${project.version}</image>
                     </to>
                 </configuration>
             </plugin>
