--- a/contents/testing/{{ artifact-id }}/{{ artifact-id }}-environment-tests/pom.xml
+++ b/contents/testing/{{ artifact-id }}/{{ artifact-id }}-environment-tests/pom.xml
@@ -69,7 +69,7 @@
                 <artifactId>jib-maven-plugin</artifactId>
                 <configuration>
                     <to>
-                        <image>p6m-dev.jfrog.io/{{ org-solution-name }}-docker-local/applications/${project.artifactId}:${project.version}</image>
+                        <image>p6m.jfrog.io/{{ org-solution-name }}-docker-local/applications/${project.artifactId}:${project.version}</image>
                     </to>
                 </configuration>
             </plugin>
