--- a/contents/base/{{ artifact-id }}/{{ artifact-id }}-integration-tests/pom.xml
+++ b/contents/base/{{ artifact-id }}/{{ artifact-id }}-integration-tests/pom.xml
@@ -82,6 +82,20 @@
                     <skip>true</skip>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.8</version>
+                <executions>
+                    <execution>
+                        <id>report</id>
+                        <goals>
+                            <goal>report-aggregate</goal>
+                        </goals>
+                        <phase>verify</phase>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
