--- a/contents/base/{{ artifact-id }}/.github/workflows/build-dev.yml
+++ b/contents/base/{{ artifact-id }}/.github/workflows/build-dev.yml
@@ -13,3 +13,5 @@ jobs:
       ARTIFACTORY_USERNAME: ${{'{'}}{ secrets.ARTIFACTORY_USERNAME }}
       ARTIFACTORY_IDENTITY_TOKEN: ${{'{'}}{ secrets.ARTIFACTORY_IDENTITY_TOKEN }}
       UPDATE_MANIFEST_TOKEN: ${{'{'}}{ secrets.UPDATE_MANIFEST_TOKEN }}
+    with:
+      ARTIFACTORY_HOSTNAME: ${{'{'}}{ vars.ARTIFACTORY_HOSTNAME }}
