--- a/contents/base/{{ artifact-id }}/{{ artifact-id }}-grpc/pom.xml
+++ b/contents/base/{{ artifact-id }}/{{ artifact-id }}-grpc/pom.xml
@@ -46,6 +46,28 @@
                 <groupId>com.github.os72</groupId>
                 <artifactId>protoc-jar-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>3.1.0</version>
+                <executions>
+                    <execution>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <target>
+                                <replace dir="target/generated-sources/"
+                                         token="javax.annotation.Generated"
+                                         value="jakarta.annotation.Generated">
+                                    <include name="**/*.java"/>
+                                </replace>
+                            </target>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 </project>
