--- a/contents/persistence/{{ artifact-id}}/{{ artifact-id }}-persistence/pom.xml
+++ b/contents/persistence/{{ artifact-id}}/{{ artifact-id }}-persistence/pom.xml
@@ -30,7 +30,7 @@
             <artifactId>postgresql</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.hibernate</groupId>
+            <groupId>org.hibernate.orm</groupId>
             <artifactId>hibernate-core</artifactId>
         </dependency>
         <dependency>
@@ -42,12 +42,8 @@
             <artifactId>{{ persistence | lower_case }}</artifactId>
         </dependency>
         <dependency>
-            <groupId>javax.validation</groupId>
-            <artifactId>validation-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>{{ group-id }}</groupId>
-            <artifactId>{{ org-solution-name }}-platform-persistence-jpa</artifactId>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
         </dependency>
     </dependencies>
 
