--- a/contents/base/{{ artifact-id }}/.github/workflows/build-dev.yml
+++ b/contents/base/{{ artifact-id }}/.github/workflows/build-dev.yml
@@ -15,3 +15,4 @@ jobs:
       UPDATE_MANIFEST_TOKEN: ${{'{'}}{ secrets.UPDATE_MANIFEST_TOKEN }}
     with:
       ARTIFACTORY_HOSTNAME: ${{'{'}}{ vars.ARTIFACTORY_HOSTNAME }}
+      JAVA_VERSION: "21"
