--- a/contents/base/{{ artifact-id }}/pom.xml
+++ b/contents/base/{{ artifact-id }}/pom.xml
@@ -317,6 +317,11 @@
                         </archive>
                     </configuration>
                 </plugin>
+                <plugin>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-maven-plugin</artifactId>
+                    <version>${org.springframework.boot.version}</version>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
